[package]
name = "chinese_programming"
version = "0.1.0"
edition = "2021"
authors = ["Chinese Programming Team"]
description = "中文编程语言解释器与IDE"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
unicode-segmentation = "1.10"
encoding_rs = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_System_Console", "Win32_Foundation"] }

egui = "0.27"
eframe = { version = "0.27", features = ["default"] }
egui_extras = { version = "0.27", features = ["all_loaders"] }
syntect = "5.1"
rfd = "0.14"
winit = { version = "0.29", features = ["rwh_05"] }

reqwest = { version = "0.11", optional = true, features = ["blocking"] }
regex = "1.10"
chrono = "0.4"
md5 = "0.7"
sha2 = "0.10"
base64 = "0.21"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
network = ["reqwest"]

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "hanyu"
path = "src/main.rs"

[[bench]]
name = "interpreter_bench"
harness = false
